--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -44,6 +44,6 @@ jobs:
       with:
         REPOSITORY_NAME: quinn-production/quinn-production.github.io
         ACCESS_TOKEN: ${{ secrets.token }}
-        BRANCH: gh-pages
+        BRANCH: master
         FOLDER: _site
         CLEAN: true
